# sandbox

./: package-lock.json
__experiments-archiveset/appium-js/: README.md  package-lock.json  package.json
__experiments-archiveset/filebeat-script/: .env  .gitignore  README.md  es.api.http  run.sh
__experiments-archiveset/flask-chat/: README.md  chat_server.py  pyproject.toml  requirements.txt  wsgi.py
__experiments-archiveset/flask-chat/src/temp/: chat_server.py
__experiments-archiveset/flask-chat/templates/: index.html
__experiments-archiveset/flask-chat/testbox/: chat_server.py
__experiments-archiveset/groovy-sample/: list.groovy  main.groovy
__experiments-archiveset/hardhat-sample/: hardhat.config.ts  package.json
__experiments-archiveset/image-resizer/: resizer.py
__experiments-archiveset/javacore/: settings.gradle
__experiments-archiveset/just-only-java/: README.md
__experiments-archiveset/multi-rye/userproject/: README.md  pyproject.toml
__experiments-archiveset/playwright-js/: package.json  playwright.config.js  storage.json
__experiments-archiveset/playwright-py/: pyproject.toml  vinit.sh
__experiments-archiveset/playwright.rye/: pyproject.toml
__experiments-archiveset/playwright.rye/src/sam/: __init__.py  google_drive.py
__experiments-archiveset/prometheus-box/: .gitignore  README.md
__experiments-archiveset/pytest-rye.pjt/: pyproject.toml
__experiments-archiveset/pytest-rye.pjt/src/pytest_rye_pjt/: justdoit.py  pytrun.py  sample.py
__experiments-archiveset/pytest-rye.pjt/temp/: test_class.py  test_fixture_a.py
__experiments-archiveset/pytest-rye.pjt/tests/: conftest.py  test_aaa.py
__experiments-archiveset/pytest-rye.pjt/tests/moly/: test_ddd.py
appium-js/docs/: capability.md
appium-sample/: README.md  test-ios.js  test.js
blockchain/: package-lock.json  package.json
cypress-sample/: .gitignore  README.md  cypress.config.js  mochawesome.json  package-lock.json  package.json
cypress-sample2/: cypress.config.js  package-lock.json
designpattern/: README.md  pyproject.toml
designpattern/behavioral_patterns/: chain_of_responsibility.py  command.py  iterator.py  observer.py  state.py  strategy.py  template_method.py  visitor.py
designpattern/creational_patterns/: builder.py  prototype.py  singleton_thread.py
designpattern/src/: main.py
designpattern/src/behavioral_patterns/: command.py  mememto.py  strategy_another.py  visitor.py
designpattern/src/creational_patterns/: factory_method.py  singleton.py
designpattern/src/special_case/: testcase.py
designpattern/src/structural_patterns/: adapter_extends.py  facade.py
designpattern/src/yalco/: 01_facade.py  02_strategy.py  03_template_method.py  07_abstract_factory.py  09_interpreter_number.py  11_proxy.py  15_builder.py
designpattern/structural_patterns/: adapter_composition.py  bridge.py  composite.py  flyweight.py  proxy.py
designpattern/tests/: conftest.py  test_hello.py
designpattern/tests/pytestx/: test_classbase.py
filebeat-control-module/: .env  .gitignore  README.md  package-lock.json  package.json
filebeat-script/: .env  es.api.http
gradle-java/: settings.gradle
groovy-sample/: hello.groovy  map.groovy
hardhat-sample/: README.md  hardhat.config.ts  package-lock.json
image-resizer/: pyproject.toml  volume.py
image-resolver/: README.md  pyproject.toml
javacore/: settings.gradle
nginx-redis-rabbitmq-mysql/: .gitignore  docker-compose.yml  run.sh
playwright-js/: README.md  package-lock.json  package.json  playwright.config.js  test-log.txt
playwright-py/: .gitignore  README.md  conftest.py  pwreport.html  pyproject.toml
playwright-py/docs/: cli.md  history.md  tips.md
playwright-py/docs/sync-async-sample/: async.py
playwright-py/pages/: login_page.py  navbar_page.py
playwright-py/sync-async-sample/: 01.py
playwright-py/tcserver/: scripts.py
playwright-py/tests/: login_sample.py  test_login.py  test_todomvc.py
playwright-py/tests-onepage/maincategory1/: test_게임조회_1.py
playwright-py/tests/maincategory1/: test_subcategory1.py
playwright.rye/: .gitignore  README.md  pyproject.toml
playwright.rye/src/samproj/: __init__.py  env-test.py  google_sheet.py
playwright.rye/tests/: test_example.py
prometheus-box/: README.md  prometheus-api.http
pytest-rye.pjt/: README.md  pyproject.toml
pythonweb/alembic/: alembic.ini  pyproject.toml
pythonweb/alembic/src/: database.py  erd.py  main.py
pythonweb/alembic/src/alembic/: __init__.py  env.py
pythonweb/alembic/src_init/: main.py
pythonweb/justpy-app/: pyproject.toml
pythonweb/pywebio-app/: pyproject.toml
pythonweb/pywebio-app/src/: main.py
ractpage/: package-lock.json  package.json
repos/poc/xpath-automapper/: README.md  pyproject.toml
repos/poc/xpath-automapper/src/htmlautomapper/: app.py  streamlit.py  streamlit2.py
resolver/: .gitignore  pyproject.toml
resolver/src/csv/: parse_csv copy.py
resolver/src/ocr/: tesseract.py
scrapper/: README.md  pyproject.toml
simple-express-server/: package.json
simple-python/: mymod.py  pyproject.toml
simple-python/src/simple_python/: __init__.py
simple-python/src/simple_python/context_sharing/: main.py
simple-python/src/simple_python/context_sharing/a_pack/: aaa1.py
simple-python/src/simple_python/context_sharing/context/: box.py  marker.py
simple-python/src/simple_python/func_property/: property_type.py
simple-python/src/simple_python/path_handle/: join.py
simple-python/src/simple_python/호출_hooking/: extlib.py  settrace.py  wrapt_hooking.py  wrapt_hooking2.py
simple-react/: cypress.config.js  package-lock.json  package.json
single-infra-nodes/: .gitignore  docker-compose.yml  run.sh
testmo-automation/: .gitignore  .testmo.example.ini  README.md  pyproject.toml
testmo-automation/jupyter/: automation.py  jupyter_shortcut.ipynb  testmo_usage_flow.ipynb
testmo-automation/scripts/: async_sample.py  collapse_folders.py  group_info.py
testmo-automation/src/testmo_automation/: resovler.py
testmo-automation/src/testmo_automation/runtime/asyn/: browser.py  pages.py  tools.py
(+207 files in other folders)
