[project]
name = "designpattern"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rhie-coder", email = "quotia72@naver.com" }
]
dependencies = [
    "rich>=13.9.4",
    "typer>=0.15.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
main = "python -B -m src.main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
