[project]
name = "flask_chat"
version = "0.1.0"
description = "Add your description here"
authors = [
]
dependencies = [
    "flask-socketio>=5.5.1",
    "eventlet>=0.39.1",
    "gunicorn>=23.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.script]
server = "gunicorn -k eventlet -w 1 wsgi:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
