[project]
name = "mypytest"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rhie-coder", email = "quotia72@naver.com" }
]
dependencies = [
    "pytest>=8.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
sample = "pytest_rye_pjt:sample.main"  # main 함수를 지정
hello = "pytest_rye_pjt:hello"
main = "pytest_rye_pjt:entrypoint.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
xtest = "pytest -s"
xtestv = "pytest -s -v"
xcollect = "pytest --collect-only"


[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_rye_pjt"]
