[project]
name = "userproject"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rhie-coder", email = "quotia72@naver.com" }
]
dependencies = [
    "mymodule @ file:///Users/rhiemh/workspace.me/sandbox/multi-rye/userproject/../mymodule",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
sample = 'python src/userproject/main.py'

# [tool.rye.dependencies]
# mymodule = { path = "../mymodule"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/userproject"]
