[project]
name = "xpath-automapper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rhie-coder", email = "quotia72@naver.com" }
]
dependencies = [
    "ollama>=0.4.7",
    "playwright>=1.51.0",
    "rich>=14.0.0",
    "streamlit>=1.44.1",
    "beautifulsoup4>=4.13.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/xpath_automapper"]
